<resources>
    <string name="app_name">AIAnimals</string>
    <string name="toolbar_title">AIAnimals</string>
    <string name="tv_menu_unit">JPY</string>
    <string name="animal_list">animal list</string>
    <string name="animal_detail">animal detail</string>
    <string name="jpy">JPY</string>
    <string name="animal_registration">Add animal</string>
    <string name="animal_name">animal name</string>
    <string name="animal_description">animal description</string>
    <string name="take_photo">Take Photo</string>
    <string name="camera">camera</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="id">id</string>
    <string name="register_animal">register animal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">cancel</string>
    <string name="ask_register_animal">register animaL?</string>
    <string name="select_photo">select photo</string>
    <string name="user_name">user name</string>
</resources>