<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:layout_gravity="center"
    android:background="@color/white"
    android:id="@+id/registration_popup">

    <TextView
        android:id="@+id/registration_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:scaleType="fitCenter"
        android:textColor="@color/purple_700"
        android:text="@string/ask_register_animal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirmation_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:scaleType="fitCenter"
        android:text="@string/register_animal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancellation_button"
        app:layout_constraintTop_toBottomOf="@+id/registration_confirmation"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/cancellation_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:scaleType="fitCenter"
        android:text="@string/cancel"
        app:layout_constraintStart_toEndOf="@+id/confirmation_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_confirmation"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
